--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,19 @@ jobs:
           sed -i "s/versionCode = [0-9]*/versionCode = ${{ steps.version.outputs.version_code }}/" app/build.gradle.kts
           sed -i "s/versionName = \"[^\"]*\"/versionName = \"${{ steps.version.outputs.version }}\"/" app/build.gradle.kts
 
+      - name: Decode Keystore
+        if: ${{ secrets.KEYSTORE_BASE64 != '' }}
+        env:
+          KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+        run: |
+          echo "$KEYSTORE_BASE64" | base64 --decode > ${{ github.workspace }}/release.keystore
+          echo "KEYSTORE_PATH=${{ github.workspace }}/release.keystore" >> $GITHUB_ENV
+
       - name: Build Release APK
+        env:
+          KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
+          KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
+          KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: ./gradlew assembleRelease
 
       - name: Build Debug APK
@@ -80,7 +92,12 @@ jobs:
       - name: Rename APK files
         run: |
           mkdir -p release-assets
-          cp app/build/outputs/apk/release/app-release-unsigned.apk release-assets/AppOpenConfirmation-${{ steps.version.outputs.version }}-release.apk
+          # Check if signed release APK exists
+          if [ -f "app/build/outputs/apk/release/app-release.apk" ]; then
+            cp app/build/outputs/apk/release/app-release.apk release-assets/AppOpenConfirmation-${{ steps.version.outputs.version }}-release.apk
+          elif [ -f "app/build/outputs/apk/release/app-release-unsigned.apk" ]; then
+            cp app/build/outputs/apk/release/app-release-unsigned.apk release-assets/AppOpenConfirmation-${{ steps.version.outputs.version }}-release-unsigned.apk
+          fi
           cp app/build/outputs/apk/debug/app-debug.apk release-assets/AppOpenConfirmation-${{ steps.version.outputs.version }}-debug.apk
 
       - name: Generate Release Notes
