--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,12 +72,15 @@ jobs:
           sed -i "s/versionName = \"[^\"]*\"/versionName = \"${{ steps.version.outputs.version }}\"/" app/build.gradle.kts
 
       - name: Decode Keystore
-        if: ${{ secrets.KEYSTORE_BASE64 != '' }}
         env:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: |
-          echo "$KEYSTORE_BASE64" | base64 --decode > ${{ github.workspace }}/release.keystore
-          echo "KEYSTORE_PATH=${{ github.workspace }}/release.keystore" >> $GITHUB_ENV
+          if [ -n "$KEYSTORE_BASE64" ]; then
+            echo "$KEYSTORE_BASE64" | base64 --decode > ${{ github.workspace }}/release.keystore
+            echo "KEYSTORE_PATH=${{ github.workspace }}/release.keystore" >> $GITHUB_ENV
+          else
+            echo "No keystore provided, skipping..."
+          fi
 
       - name: Build Release APK
         env:
